// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-1537884512"
>
  <section
    className="jsx-2086237504"
  >
    <h1
      className="jsx-2086237504"
    >
      Test title
    </h1>
  </section>
  <section
    className="jsx-2470002511"
  >
    <h2
      className="jsx-2470002511"
    >
      Test subtitle
    </h2>
  </section>
</section>
`;

exports[`HeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-1537884512"
>
  <section
    className="jsx-2086237504"
  >
    <h1
      className="jsx-2086237504"
    >
      Test title
    </h1>
  </section>
  <section
    className="jsx-2470002511"
  >
    
  </section>
</section>
`;
